# Controle-Ax12---ROS2

./: .gitignore  AGENTS.md  AX12Controller.py  AX12Controller_01.py  AX12Controller_v1.py  AX12Controller_v2.py  AX12Reader.py  CHANGELOG.md  LICENSE  README.md  controller _antigo.py  package.xml  send_antigo.py  send_gait.py  setup.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
adam/: CMakeLists.txt  package.xml
adam/config/: ros2_controllers.yaml
adam/launch/: display.launch.py  gazebo.launch.py
adam/meshes/: bd_antibraco.STL  be_ombro.STL  pd_coxa.STL  pd_quadril.STL  pd_tornozelo.STL  pe_canela.STL  pe_pe.STL
adam/urdf/: adam.ros2_control.xacro  adam.urdf  adam_fixed.urdf
adam_moveit_config/: CMakeLists.txt
adam_moveit_config/config/: adam.srdf  kinematics.yaml  moveit.rviz  moveit_controllers.yaml
adam_moveit_config/launch/: move_group.launch.py
ax12_control/: adam.rviz  ax12_controller.py  cin_inve.yaml  otimizada.yaml  send_gait.py  visualizar_marcha.py
docs/: adr.md  arquitetura.md  bizuario_ros.md  install.md  referencias-ax12.md  troubleshooting.md
docs/ref/: comandos-ros.md  referencias-ax12.md
docs/troubleshooting/: afundamento-tensao-pi.md  problemas-comuns.md
launch/: visualizar_marcha.launch.py
matrizes de movimento/: cin_inve.yaml  otimização.h
matrizes-de-movimento/: cin_inve.yaml  otimizada.yaml
src/: README.md
src/adam/: fix_urdf_origins.py
src/adam/config/: adam.rviz  joint_names_adam.yaml
src/adam/launch/: display.launch  display.launch.py  mock.launch.py
src/adam/meshes/: bd_biceps.STL  pd_pe.STL  pe_quadril.STL
src/adam/urdf/: adam.csv  adam.urdf.xacro  gen_xacro.py
src/adam_moveit_config/: .setup_assistant  package.xml
src/adam_moveit_config/config/: adam.srdf  joint_limits.yaml  kinematics.yaml
src/adam_moveit_config/launch/: demo.launch.py
src/adam_urdf/: CMakeLists.txt  package.xml
src/adam_urdf/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  mock.launch.py
src/adam_urdf/meshes/: bd_ombro.STL  be_antibraco.STL  be_biceps.STL  pd_canela.STL  pe_coxa.STL  pe_tornozelo.STL
src/adam_urdf/urdf/: adam.csv  adam.urdf  adam.urdf.xacro  adam_fixed.urdf  gen_xacro.py
src/ax12_control/: package.xml  setup.cfg  setup.py
src/ax12_control/ax12_control/: adam.rviz  ax12_controller.py  ax12_monitor.py  cin_inve_2.yaml  cin_inve_roll.yaml  controle_manual.py  gait_bridge.py  marcha_manual.py  matriz_zmp.yaml  otimizada.yaml  passo_slider.py  send_gait.py
src/ax12_control/launch/: controle_manual.launch.py  marcha_manual.launch.py  (+1 more)
