<?xml version="1.0"?>
<package format="3">
  <name>adam_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 config para o robo bipede Adam (AX-12).</description>
  <maintainer email="machado.fernando@ime.eb.br">Machado-ime</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>adam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
